added variables for first question

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39672e2b",
+   "id": "92ce1f72",
    "metadata": {},
    "source": [
     "\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5ba3a672",
+   "id": "03f54173",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131baa48",
+   "id": "358d1e09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70e0611b",
+   "id": "9a004529",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85c34343",
+   "id": "00d41b7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f09663a4",
+   "id": "b04ba4c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d29b123",
+   "id": "0a0472e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc222f5f",
+   "id": "3db6dbed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06265e76",
+   "id": "00244932",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c6f15c7",
+   "id": "b2753b0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c04f1c7",
+   "id": "6125b02b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "097f5b84",
+   "id": "0c8e8bda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8a26c25",
+   "id": "0513b96c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d222f137",
+   "id": "c945206e",
    "metadata": {},
    "source": [
     "## 2 - Load the mpg dataset and use it to answer the following questions:"
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "03c3ee00",
+   "id": "beb744dd",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9f96b164",
+   "id": "e185d6ef",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "884435fb",
+   "id": "6837e66b",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8d0dc8fa",
+   "id": "376feb93",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3bee4335",
+   "id": "71dd0a07",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1a0befc6",
+   "id": "3d5f9889",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c7ec8e46",
+   "id": "8d8621c8",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "45ecedb0",
+   "id": "70a31ef0",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "d30f8d45",
+   "id": "553cfbd6",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6e190a1a",
+   "id": "51d73817",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "53e9a734",
+   "id": "02f2e852",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9f7a961d",
+   "id": "5196365f",
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bb0d252",
+   "id": "c5677de9",
    "metadata": {},
    "source": [
     "### Are compact cars more fuel-efficient than the average car?"
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "32ac05e3",
+   "id": "597a1b4d",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "99707ef3",
+   "id": "aa3547ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "f54ad70e",
+   "id": "ff7b1cdc",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "858ff69c",
+   "id": "3011dcc0",
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "a4995124",
+   "id": "3c1143af",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "243b78d7",
+   "id": "fa881254",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "984a0907",
+   "id": "a5348a28",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4bf8c17",
+   "id": "b9d8b7d2",
    "metadata": {},
    "source": [
     "### Do manual cars get better gas mileage than automatic cars?"
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "6168171e",
+   "id": "43213d4e",
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "a6a21f2b",
+   "id": "54001d96",
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "b64f47ce",
+   "id": "998d6eb1",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "5804d692",
+   "id": "d6737aee",
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f54dbb61",
+   "id": "af3b2090",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "25785ede",
+   "id": "0e742a48",
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "d7a12f94",
+   "id": "0f825e0e",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "5a7349c3",
+   "id": "5c918f7c",
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03f22a64",
+   "id": "7e5754b9",
    "metadata": {},
    "source": [
     "## Correlation Exercises"
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65a12be3",
+   "id": "b8aea21e",
    "metadata": {},
    "source": [
     "### Use the telco_churn data. Does tenure correlate with monthly charges? Total charges? What happens if you control for phone and internet service?"
@@ -1043,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "6ed7d04f",
+   "id": "da0cab3c",
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "9de6b345",
+   "id": "e7fbca87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "fb29cece",
+   "id": "21dec828",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "1274a20f",
+   "id": "4463954a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "51a2a4e2",
+   "id": "e099d655",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "ac358981",
+   "id": "b84be4a1",
    "metadata": {},
    "outputs": [
     {
@@ -1592,17 +1592,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "5285fedf",
+   "execution_count": 116,
+   "id": "d9b7cddd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x15a19d910>"
+       "<seaborn.axisgrid.PairGrid at 0x15b2c47c0>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1622,14 +1622,15 @@
    "source": [
     "tenure = df.tenure\n",
     "monthly_charges = df.MonthlyCharges\n",
+    "tcharges = df.TotalCharges\n",
     "\n",
     "sns.pairplot(df, corner= True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "51401e30",
+   "execution_count": 118,
+   "id": "65d7d3a8",
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1639,7 @@
        "0.24686176664089346"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1664,8 +1665,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "ecbc1168",
+   "execution_count": 119,
+   "id": "ef70b70f",
    "metadata": {},
    "outputs": [
     {
@@ -1674,7 +1675,7 @@
        "21.35920054761362"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1686,8 +1687,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "eb96fc11",
+   "execution_count": 120,
+   "id": "d3e00c5f",
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1697,7 @@
        "3.989821323220255e-98"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,8 +1709,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "3db55667",
+   "execution_count": 121,
+   "id": "4b96282e",
    "metadata": {},
    "outputs": [
     {
@@ -1729,8 +1730,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "3861adc0",
+   "execution_count": 122,
+   "id": "3da0716e",
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1740,7 @@
        "(0.24686176664089593, 3.989821323249241e-98)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,8 +1752,365 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 126,
+   "id": "dc7fac0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8258804609332019"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total Charges\n",
+    "x = df.tenure\n",
+    "y = tcharges\n",
+    "r_xy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "96f129f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "122.81033866910865"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = (r_xy * sqrt(n - 2)) / sqrt(1 - r_xy**2)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "98e77838",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = stats.t.sf(t, df=degf) * 2 # *2 for a two-tailed test\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "63f888e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reject Ho\n"
+     ]
+    }
+   ],
+   "source": [
+    "if p < α:\n",
+    "    print(f'Reject Ho')\n",
+    "else:\n",
+    "    print(f'Fail to Reject Ho')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "d9767d34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8258804609332093, 0.0)"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr, p = stats.pearsonr (x,y)\n",
+    "corr, p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "94839b6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Fiber optic    3096\n",
+       "DSL            2416\n",
+       "No             1520\n",
+       "Name: InternetService, dtype: int64"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What happens if you control for phone and internet service?\n",
+    "df.InternetService.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "73c58199",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Yes    6352\n",
+       "No      680\n",
+       "Name: PhoneService, dtype: int64"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.PhoneService.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "16eee349",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Building filters\n",
+    "phonesample = df[df.PhoneService == 'Yes']\n",
+    "nophonesample=df[df.PhoneService == 'No']\n",
+    "internetsample = df[df.InternetService != 'No']\n",
+    "nointernetsample = df[df.InternetService =='No']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "93baaa65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.2468617666408935, 122.81033866910865, 3.989821323249241e-98)"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reassign variables with Filters\n",
+    "n = phonesample.shape[0]\n",
+    "x = df.tenure\n",
+    "y = df.MonthlyCharges\n",
+    "r_xy = (((x - x.mean()) * (y - y.mean())).sum() / n) / (std(x) * std(y))\n",
+    "p = stats.t.sf(t, df=degf) * 2\n",
+    "corr, p = stats.pearsonr (x,y)\n",
+    "r_xy, t, p "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "1c949243",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reject Ho\n"
+     ]
+    }
+   ],
+   "source": [
+    "if p < α:\n",
+    "    print(f'Reject Ho')\n",
+    "else:\n",
+    "    print(f'Fail to Reject Ho')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "34059a3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.24686176664089343, 122.81033866910865, 3.989821323249241e-98)"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = nophonesample.shape[0]\n",
+    "x = df.tenure\n",
+    "y = df.MonthlyCharges\n",
+    "r_xy = (((x - x.mean()) * (y - y.mean())).sum() / n) / (std(x) * std(y))\n",
+    "p = stats.t.sf(t, df=degf) * 2\n",
+    "corr, p = stats.pearsonr (x,y)\n",
+    "r_xy, t, p "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "b530aa08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.24686176664089343, 122.81033866910865, 3.989821323249241e-98)"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = internetsample.shape[0]\n",
+    "x = df.tenure\n",
+    "y = df.MonthlyCharges\n",
+    "r_xy = (((x - x.mean()) * (y - y.mean())).sum() / n) / (std(x) * std(y))\n",
+    "p = stats.t.sf(t, df=degf) * 2\n",
+    "corr, p = stats.pearsonr (x,y)\n",
+    "r_xy, t, p "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "2005ece3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.24686176664089343, 122.81033866910865, 3.989821323249241e-98)"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = nointernetsample.shape[0]\n",
+    "x = df.tenure\n",
+    "y = df.MonthlyCharges\n",
+    "r_xy = (((x - x.mean()) * (y - y.mean())).sum() / n) / (std(x) * std(y))\n",
+    "p = stats.t.sf(t, df=degf) * 2\n",
+    "corr, p = stats.pearsonr (x,y)\n",
+    "r_xy, t, p "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "84424343",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.825880460933202, 122.81033866910865, 0.0)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = nophonesample.shape[0]\n",
+    "x = df.tenure\n",
+    "y = tcharges\n",
+    "r_xy = (((x - x.mean()) * (y - y.mean())).sum() / n) / (std(x) * std(y))\n",
+    "p = stats.t.sf(t, df=degf) * 2\n",
+    "corr, p = stats.pearsonr (x,y)\n",
+    "r_xy, t, p "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "8a4981e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8258804609332019, 122.81033866910865, 0.0)"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = nointernetsample.shape[0]\n",
+    "x = df.tenure\n",
+    "y = tcharges\n",
+    "r_xy = (((x - x.mean()) * (y - y.mean())).sum() / n) / (std(x) * std(y))\n",
+    "p = stats.t.sf(t, df=degf) * 2\n",
+    "corr, p = stats.pearsonr (x,y)\n",
+    "r_xy, t, p "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "20a39714",
+   "id": "dc5a6869",
    "metadata": {},
    "outputs": [],
    "source": []
